# MinecraftCerver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bridge/: Bridge.cpp  Bridge.h
bridge/game/: GameSession.h  GameVersion.h  Language.h  PerformanceMetrics.h  RunningGame.h
bridge/launcher/: Launcher.h  LauncherProvider.h  SessionEventListener.h
brigadier/: Message.cpp  Message.h
datafixers/kinds/: App.h  Functor.h  K1.h  Kind1.h
doc/: banner.psd  icon.sketch
math/: Constants.h  Matrix3f.cpp  Matrix3f.h  Matrix4f.cpp  Matrix4f.h  Quaternion.cpp  Quaternion.h  Transformation.cpp  Transformation.h  Vector3d.cpp  Vector3d.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
minecraft/: ChatFormatting.cpp  ChatFormatting.h
minecraft/core/: Cursor3D.cpp  Cursor3D.h  Direction.cpp  Direction.h  FrontAndTop.cpp  FrontAndTop.h  Position.cpp  Position.h  PositionImpl.cpp  PositionImpl.h  QuartPos.cpp  QuartPos.h
minecraft/network/chat/: Component.cpp  Component.h  Style.cpp  Style.h  TextColor.cpp  TextColor.h
minecraft/util/: FastColor.cpp  FastColor.h  Mth.cpp  Mth.h  StringUtil.cpp  StringUtil.h  Tuple.cpp  Tuple.h
minecraft/world/: Nameable.cpp  Nameable.h
minecraft/world/entity/: Entity.cpp  Entity.h
serialization/: DataResult.cpp  DataResult.h  Lifecycle.cpp  Lifecycle.h
util/: Date.cpp  Date.h  Hash.h  UUID.cpp  UUID.h
